ExpenseTrackerBackend/src/main/java/com/example/expenseit/errors/authentication/LoginFailedException.java
package com.example.expenseit.errors.authentication;

public class LoginFailedException extends AuthException {
    public LoginFailedException(String message) {
        super(message);
    }
}
